@@ -1,3 +1,8 @@
 # LinuxMagazin Java 18
 Dies Projekt enthält die vollständige Beispielquellen für den Java 18 Artikel von Carsten Zerbst.
 
+
+
+java -cp "showcasefx-0.2.0.jar:./*" --module-path . --add-modules=javafx.controls,javafx.fxml --add-reads javafx.graphics=ALL-UNNAMED --add-opens javafx.controls/com.sun.javafx.charts=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.css=ALL-UNNAMED --add-opens javafx.base/com.sun.javafx.runtime=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.util=ALL-UNNAMED --add-opens javafx.base/com.sun.javafx.logging=ALL-UNNAMED --add-opens javafx.graphics/com.sun.prism=ALL-UNNAMED  --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.geom.transform=ALL-UNNAMED   --add-opens javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED --add-opens javafx.graphics/com.sun.glass.utils=ALL-UNNAMED  --add-opens javafx.graphics/com.sun.javafx.font=ALL-UNNAMED  --add-opens javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED com.dlsc.showcase.app.ShowcaseFX
+
+
